<?xml version="1.0"?>
<package format="3">
  <name>alpha_bot</name>
  <version>0.0.1</version>
  <description>ROS 2 package for alpha_bot</description>

  <maintainer email="mdaro22@student.aau.dk">Magnus</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS 2 dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>

  <!-- System dependencies -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
